--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 body{
     font-family: 'Open Sans Condensed', sans-serif;
+    padding: 20px  60px;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+a{
+    text-decoration: none;
+    color: black;
 }
